--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -9,14 +9,13 @@ frontend shadowsocks-in
 backend shadowsocks-out
     mode tcp
     balance roundrobin
-        server  hk-B   hk-B.2cy.ltd:7420  check
-        server  hk-C   hk-C.2cy.ltd:7420  check
-        server  hk-G   hk-G.2cy.ltd:7420  check
-        server  hk-F   hk-F.2cy.ltd:7420  check
-        server  hk-W   hk-W.2cy.ltd:7420  check
-        server  hk-V   hk-V.2cy.ltd:7420  check
+        server  tw-B   tw-B.32142.xyz:7420  check
+        server  tw-d   tw-d.2cy.ltd:7420  check
+        server  hk43   hk43.2cy.ltd:7420  check
+        server  hk44   hk44.2cy.ltd:7420  check
+        server  hk51   hk51.2cy.ltd:7420  check
+        server  hk52   hk52.2cy.ltd:7420  check
         server  jp-A   jp-A.2cy.ltd:7420  check
-        server  jp-C   jp-C.2cy.ltd:7420  check
 
 listen stats
     mode http
